# dialogue-systems-course

./: .env.example  .gitignore  README.md  TODO.md  pyproject.toml
domain_selection/: README.md  domain_choice.md
lab1_api/: README.md  pyproject.toml
lab1_api/code/: api_experiment.py
lab2_embedding/: README.md  lab2_embedding.ipynb  lab2_embedding.py  pyproject.toml  requirements.txt
lab3_html_to_pdf/: README.md  lab3.ipynb  lab3.py  pyproject.toml
lab4_pdf_pipeline/: README.md  lab4-dsc.ipynb  lab4-dsc.py  lab4_pdf_pipeline.py  pyproject.toml
lab5_web_search/: README.md  lab5_web_search.py  pyproject.toml  requirement.txt  requirements.txt
lab6_memory_history/: README.md  lab6_memory_history.py  pyproject.toml
lab7_document_search/: README.md  lab7_document_search.py  pyproject.toml  requirements.txt
lab8_tg_bot/: README.md  pyproject.toml
lab8_tg_bot/bot/: __main__.py
lab8_tg_bot/bot/config/: settings.py
lab8_tg_bot/bot/factory/: bot.py
lab8_tg_bot/bot/handlers/: __init__.py
lab8_tg_bot/bot/handlers/messages/: start.py
langfuse/: README.md
