[project]
name = "dialogue-systems-course"
version = "0.1.0"
description = "Курс по диалоговым системам"
requires-python = ">=3.12"
dependencies = [
    # Mistral AI
    "mistralai>=1.10.0",
    # LangChain
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.16",
    "langchain-mistralai>=1.1.1",
    # LangGraph
    "langgraph>=1.0.7",
    # Векторные БД и эмбеддинги
    "lancedb>=0.29.2",
    # PDF и парсинг
    "docling>=2.66.0",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "playwright>=1.57.0",
    "requests>=2.32.5",
    # Данные и ML
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "scikit-learn>=1.8.0",
    "pyarrow>=22.0.0",
    # Токенизация
    "tiktoken>=0.12.0",
    "transformers>=4.57.3",
    # Поиск
    "tavily-python>=0.7.21",
    # Telegram бот
    "aiogram>=3.19.0",
    "orjson>=3.10.16",
    "uvloop>=0.21.0",
    # Утилиты
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "tenacity>=9.1.2",
    "langchain-tavily>=0.2.17",
]
