[project]
name = "lab4-pdf-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.66.0",
    "lancedb>=0.26.1",
    "mistralai>=1.10.0",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "tenacity>=9.1.2",
    "tiktoken>=0.12.0",
    "transformers>=4.57.3",
]
