[project]
name = "lab5-web-search"
version = "0.1.0"
description = "Lab 5: LangChain — AI-приложения на основе LLM"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-mistralai>=0.2.0",
    "pandas>=2.3.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.1",
    "tavily-python>=0.5.0",
]
